--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -12,25 +12,15 @@
         background-color: #2c3e50;
         }
     
-    .preview {
-        width: 60%;
-        height: 60%;
+
+    .row {
+      display: flex;
     }
 
-    /* Three image containers (use 25% for four, and 50% for two, etc) */
-.column {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-  }
-  
-  /* Clear floats after image containers */
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-
+    .column {
+  flex: 33.33%;
+  padding: 5px;
+}
   button {
     font-family: beleren;
     src: url('Beleren2016-Bold.ttf');
@@ -42,4 +32,5 @@
     text-align: center;
     display: inline-block;
     font-size: 16px;
+    cursor: pointer;
   }
