--- a/templates/dungeon.html
+++ b/templates/dungeon.html
@@ -36,10 +36,10 @@
  
     all_data = {{data["rooms"] | safe}}
 
-    let your_current_options = all_data[0]["name"];
+    your_current_options = all_data[0]["name"];
     // Color the walked path in red
 
-    lightMe(roomNameFixer(your_current_options))
+    $(roomNameFixer(your_current_options).data('maphilight', {"stroke":0, "alwaysOn": true, "fillColor":"008800", "fillOpacity":0.3}))
     
 map.addEventListener("click", eventHandler, false);
 
@@ -50,7 +50,6 @@ function eventHandler(e) {
     var clicked = e.target.title;
     if (your_current_options.includes(clicked)) {
         // Legal option - search the lead to
-        e.preventDefault();
 
         element_to_light = roomNameFixer(clicked);
         $(element_to_light).data('maphilight', {"stroke":0, "alwaysOn": true, "fillColor":"FF0000", "fillOpacity":0.3})
@@ -61,9 +60,15 @@ function eventHandler(e) {
             i++
             if (room["name"] === clicked){
                 your_current_options = all_data[i]["leads_to"];
+                console.log("your_current_options = " + your_current_options)
+                console.log("last_leads_to = " + last_leads_to)
                 path_not_taken = []
                 if (last_leads_to.length == 0) {last_leads_to = your_current_options}
-                if (last_leads_to.includes(clicked)) {path_not_taken = last_leads_to.filter(word => word != clicked);}
+                if (last_leads_to.includes(clicked))
+                {
+                    path_not_taken = last_leads_to.filter(word => word != clicked)
+                }
+
                 for (room of path_not_taken)
                 {
                     roomNameFixer(room).data('maphilight', {"stroke":0, "alwaysOn": false})
@@ -82,12 +87,13 @@ function eventHandler(e) {
                     localStorage.setItem(dungeon, ++number_of_finishes);
                     window.location.replace("..");
                 }
+                last_leads_to = your_current_options
             }
         }
 
     }
     else {
-        alert("NO")
+        console.log("Illegal choice")
     }
     console.log('click event triggered at ' + clicked);
   }
