--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -1,36 +1,37 @@
 * {
-    box-sizing: border-box;
-  }
-@font-face{
-    font-family: beleren;
-    src: url('Beleren2016-Bold.ttf');
-    font-weight: bold;}
-    
-    body {
-        font-family: beleren; 
-        color:white;
-        background-color: #2c3e50;
-        }
-    
+  box-sizing: border-box;
+}
+@font-face {
+  font-family: beleren;
+  src: url("Beleren2016-Bold.ttf");
+  font-weight: bold;
+}
 
-    .row {
-      display: flex;
-    }
+body {
+  font-family: beleren;
+  color: white;
+  background-color: #2c3e50;
+}
 
-    .column {
+.row {
+  display: flex;
+  margin-bottom: 80px;
+}
+
+.column {
   flex: 33.33%;
   padding: 5px;
 }
-  button {
-    font-family: beleren;
-    src: url('Beleren2016-Bold.ttf');
-    font-weight: bold;
-    background-color: darkblue;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-  }
+button {
+  font-family: beleren;
+  src: url("Beleren2016-Bold.ttf");
+  font-weight: bold;
+  background-color: darkblue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
