--- a/templates/home.html
+++ b/templates/home.html
@@ -12,13 +12,14 @@
         {% for image in all_images %}
         <div class="column">
         <a href="dungeon/{{image | replace(".jpg", "")}}">
-            <img style="width:100%" class="preview" src="static/{{image}}">
+            <img style="width:100% ; height: 100%;" class="preview" src="static/{{image}}">
         </a>
         <h2>Times Finished: <span id={{image  | replace(".jpg", "")}}></span></h2>
         </div>
         {% endfor %}
         </div>
     </center>
+
     <p>Wizards of the Coast, Magic: The Gathering, and their logos are trademarks of Wizards of the Coast LLC. © 1995-2021 Wizards. All rights reserved. Nothing on this site is affiliated with Wizards of the Coast LLC.</p>
 </body>
 
